--- a/Car_shop_Data/www/index.html
+++ b/Car_shop_Data/www/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>AUTOVALLAURI</title>
+  <title>Autosalone da Stefirca</title>
   <meta name="author" content="">
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -17,10 +17,10 @@
 
 <body>
 	<div class="container">
-		<h2>AUTOPALU - VEICOLI NUOVI E USATI</h2>
-		<h5>Le migliori occasioni al miglior prezzo!</h5>
+		<h2>Veicoli nuovi e usati</h2>
+		<h5>prezzi scontati ogni giorno!</h5>
 	</div>
-    <div><h3> LISTA DEI VEICOLI DISPONIBILI </h3><div class = "veicolo"><img src = "../img/FIAT-Nero-Panda.jpg"><div class = "titolo">FIAT Panda<div class = "didascalia"> Colore: Nero<br> Cilindrata: 1000<br> Immatricolazione: 06/12/2019<br>  Nuovo <br> Chilometri percorsi: 0<br> Potenza: 75 <br> Prezzo: 40000 € </div></div></div><div class = "veicolo"><img src = "../img/BMW-Rosso-M3.jpg"><div class = "titolo">BMW M3<div class = "didascalia"> Colore: Rosso<br> Cilindrata: 3000<br> Immatricolazione: 01/05/2020<br> Chilometro zero, Nuovo <br> Chilometri percorsi: 0<br> Potenza: 200 <br> Prezzo: 65000 € </div></div></div><div class = "veicolo"><img src = "../img/DUCATI-Nero-Squalo.jpg"><div class = "titolo">DUCATI Squalo<div class = "didascalia"> Colore: Nero<br> Cilindrata: 1000<br> Immatricolazione: 06/12/2019<br>  Nuovo <br> Chilometri percorsi: 0<br> Potenza: 75 <br> Prezzo: 50000 € </div></div></div><div class = "veicolo"><img src = "../img/HONDA-Rosso-Tsunami.jpg"><div class = "titolo">HONDA Tsunami<div class = "didascalia"> Colore: Rosso<br> Cilindrata: 1000<br> Immatricolazione: 06/12/2019<br>  Nuovo <br> Chilometri percorsi: 0<br> Potenza: 120 <br> Prezzo: 50000 € </div></div></div></div>
+    <div><h3> Veicoli disponibili </h3><div class = "veicolo"><img src = "../img/default.png"><div class = "titolo">DFSD dsfsd<div class = "didascalia"> Colore: sdfsd<br> Cilindrata: 50<br> Immatricolazione: 15/05/2020<br>  Nuovo <br> Chilometri percorsi: 0<br> Potenza: 10 <br> Prezzo: 4000 € </div></div></div><div class = "veicolo"><img src = "../img/default.png"><div class = "titolo">DFD dfsdf<div class = "didascalia"> Colore: sdfsd<br> Cilindrata: 50<br> Immatricolazione: 15/05/2020<br>  Nuovo <br> Chilometri percorsi: 0<br> Potenza: 10 <br> Prezzo: 4000 € </div></div></div></div>
 </body>
 
 </html>
