--- a/Car_shop_Data/www/index.html
+++ b/Car_shop_Data/www/index.html
@@ -20,7 +20,7 @@
 		<h2>Veicoli nuovi e usati</h2>
 		<h5>prezzi scontati ogni giorno!</h5>
 	</div>
-    <div><h3> Veicoli disponibili </h3><div class = "veicolo"><img src = "../img/default.png"><div class = "titolo">DFSD dsfsd<div class = "didascalia"> Colore: sdfsd<br> Cilindrata: 50<br> Immatricolazione: 15/05/2020<br>  Nuovo <br> Chilometri percorsi: 0<br> Potenza: 10 <br> Prezzo: 4000 € </div></div></div><div class = "veicolo"><img src = "../img/default.png"><div class = "titolo">DFD dfsdf<div class = "didascalia"> Colore: sdfsd<br> Cilindrata: 50<br> Immatricolazione: 15/05/2020<br>  Nuovo <br> Chilometri percorsi: 0<br> Potenza: 10 <br> Prezzo: 4000 € </div></div></div></div>
+    <div><h3> Veicoli disponibili </h3><div class = "veicolo"><img src = "../img/default.png"><div class = "titolo">DFSD dsfsd<div class = "didascalia"> Colore: sdfsd<br> Cilindrata: 50<br> Immatricolazione: 15/05/2020<br>  Nuovo <br> Chilometri percorsi: 0<br> Potenza: 10 <br> Prezzo: 4000 € </div></div></div><div class = "veicolo"><img src = "../img/default.png"><div class = "titolo">DFD dfsdf<div class = "didascalia"> Colore: sdfsd<br> Cilindrata: 50<br> Immatricolazione: 15/05/2020<br>  Nuovo <br> Chilometri percorsi: 0<br> Potenza: 10 <br> Prezzo: 4000 € </div></div></div><div class = "veicolo"><img src = "../img/default.png"><div class = "titolo">EFAFVF vazcv<div class = "didascalia"> Colore: zdva<br> Cilindrata: 1651<br> Immatricolazione: 15/05/2020<br>  Usato <br> Chilometri percorsi: 2<br> Potenza: 519 <br> Prezzo: 51569 € </div></div></div></div>
 </body>
 
 </html>
